# run3-mj-evaluator

./: README.md  evaluate.py  pyproject.toml
config/: config.json
scripts/: make_fileset.py  submit_evaluator.py
src/run3_mj_evaluator/: evaluate.py
