[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "run3-mj-evaluator"
version = "1.0.0"
description = "ONNX ML evaluator for the 6-jet multijet analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "uproot>=5.0",
    "awkward>=2.0",
    "numpy>=1.20",
    "boost-histogram>=1.3",
    "onnxruntime>=1.14",
    "fsspec_xrootd",
]

[project.scripts]
run3-mj-evaluator = "run3_mj_evaluator.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]
